--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,7 @@ technologies:
         framework:
             [symfony]
     javascript:
-        [node.js, react, angular]
+        [node.js, react, vanilla]
     devel:
         [ubuntu, docker, intellij, git, jenkins, jira, trello]
     buzz:
