--- a/public_html/index.html
+++ b/public_html/index.html
@@ -20,7 +20,7 @@ technologies:
         framework:
             [symfony]
     javascript:
-        [node.js, react, angular]
+        [node.js, react, vanilla]
     devel:
         [ubuntu, docker, intellij, git, jenkins, jira, trello]
     buzz:
